--- a/static site/index.html
+++ b/static site/index.html
@@ -8,7 +8,10 @@
 
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="shortcut icon" type="image/svg" href='favicon.svg'/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <link rel="stylesheet" href='main.css'>
         <script src='scripts.js'></script>
         <script type="text/javascript" id="MathJax-script" async
