--- a/static site/index.html
+++ b/static site/index.html
@@ -31,7 +31,7 @@
                     \(\ x\)
                 </h2>
             </div>
-        <button onClick="replaceEquation();">next</button>
+        <button onClick="replaceEquation(); toggleMenu();">next</button>
         </div>
 
         <div id="menu-icon" onclick="toggleMenu();" style="display: block;">
