--- a/static site/index.html
+++ b/static site/index.html
@@ -31,7 +31,7 @@
                     \(\ x\)
                 </h2>
             </div>
-        <button onClick="replaceEquation(); toggleMenu();">next</button>
+        <button onClick="replaceEquation(); closeMenu();">next</button>
         </div>
 
         <div id="menu-icon" onclick="toggleMenu();" style="display: block;">
@@ -39,7 +39,7 @@
                 <circle cx="10" cy="40" r="6" stroke="white" stroke-width="0" fill="white"/>
                 <circle cx="10" cy= "25" r="6" stroke="white" stroke-width="0" fill="white"/>
                 <circle cx="10" cy="10" r="6" stroke="white" stroke-width="0" fill="white"/>
-              </svg>
+            </svg>
         </div>
 
         <nav id="menu" style="display: none;">
