--- a/static site/index.html
+++ b/static site/index.html
@@ -31,15 +31,12 @@
                 </h2>
             </div>
             <div class="equation" onclick="showAnswer();">
-                <h2 id="current-answer">
-                    \(x=\mathbb{R}\)
-                </h2>
+                <h2 id="current-answer"></h2>
             </div>
         <button onClick="replaceEquation(); hideAnswer(); timeAnswer();">next</button>
         </div>
-        <!-- <script>"MathJax.typeset();"</script> -->
 
-        <div id="menu-icon" onclick="toggleMenu();" style="display: block;">
+        <div id="menu-icon" onmouseenter="toggleMenu();" style="display: block;">
             <svg height="50" width="20">
                 <circle cx="10" cy="40" r="6" stroke="white" stroke-width="0" fill="white"/>
                 <circle cx="10" cy= "25" r="6" stroke="white" stroke-width="0" fill="white"/>
@@ -47,7 +44,7 @@
             </svg>
         </div>
 
-        <nav id="menu" onmouseleave="closeMenu();" style="display: none;">
+        <nav id="menu" onmouseleave="toggleMenu();" style="display: none;">
             <div class="menu-container" onclick="updateTopic(event);toggleMenu();">
                 <a class="menu-item">one-step</a>
             </div>
