--- a/static site/index.html
+++ b/static site/index.html
@@ -33,7 +33,7 @@
             <div class="equation" onclick="showAnswer();">
                 <h2 id="current-answer"></h2>
             </div>
-        <button onClick="replaceEquation(); hideAnswer(); timeAnswer();">next</button>
+        <button onClick="replaceEquation(); hideAnswer(); timeAnswer(); closeMenu();">next</button>
         </div>
 
         <div id="menu-icon" onmouseenter="toggleMenu();" style="display: block;">
