--- a/static site/index.html
+++ b/static site/index.html
@@ -7,7 +7,6 @@
         <meta name="viewport" content="width=device-width">
 
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -20,6 +19,16 @@
 
     </head>
     <body>
+        <div class="speed-outer">
+            <svg height="30" width="50">
+                <circle cx="25" cy="25" r="20" stroke="white" stroke-width="4" fill="none"/>
+            </svg>
+        </div>
+        <div class="speed-toggle" id="slow" onclick="changeSpeed();">
+            <svg height="30" width="50">
+                <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3"/>
+            </svg>
+        </div>
 
         <div class="center-box">
             <div class="topic">
@@ -29,6 +38,7 @@
                 <h2 id="current-equation">
                     \(f(x) = x\)
                 </h2>
+            <script>MathJax.typeset();</script>
             </div>
             <div class="equation" onclick="showAnswer();">
                 <h2 id="current-answer"></h2>
