--- a/static site/index.html
+++ b/static site/index.html
@@ -40,7 +40,7 @@
                 </h2>
             <script>MathJax.typeset();</script>
             </div>
-            <div class="equation" onclick="showAnswer();">
+            <div class="answer" onclick="showAnswer();">
                 <h2 id="current-answer"></h2>
             </div>
         <button onClick="replaceEquation(); hideAnswer(); timeAnswer(); closeMenu();">next</button>
