--- a/static site/index.html
+++ b/static site/index.html
@@ -29,6 +29,8 @@
                 <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3"/>
             </svg>
         </div>
+        <p class="speed-info"> 
+        </p>
 
         <div class="center-box">
             <div class="topic">
