--- a/static site/index.html
+++ b/static site/index.html
@@ -29,7 +29,8 @@
                 <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3"/>
             </svg>
         </div>
-        <p class="speed-info"> 
+        <p class="speed-info">
+            45s/answer 
         </p>
 
         <div class="center-box">
@@ -49,10 +50,10 @@
         </div>
 
         <div id="menu-icon" onmouseenter="openMenu();" style="display: block;">
-            <svg height="50" width="20">
-                <circle cx="10" cy="40" r="6" stroke="white" stroke-width="0" fill="white"/>
-                <circle cx="10" cy= "25" r="6" stroke="white" stroke-width="0" fill="white"/>
-                <circle cx="10" cy="10" r="6" stroke="white" stroke-width="0" fill="white"/>
+            <svg height="100" width="100">
+                <circle cx="50" cy="65" r="6" stroke="white" stroke-width="0" fill="white"/>
+                <circle cx="50" cy= "50" r="6" stroke="white" stroke-width="0" fill="white"/>
+                <circle cx="50" cy="35" r="6" stroke="white" stroke-width="0" fill="white"/>
             </svg>
         </div>
 
