--- a/static site/index.html
+++ b/static site/index.html
@@ -24,20 +24,22 @@
             <ul>
                 <li class="menu-container">Types of Equation
                     <ul class="menu-items">
-                        <li id="item-1" onclick="updateTopic(event);">one-step</li>
-                        <li  id="item-2" onclick="updateTopic(event);">two-step</li>
-                        <li id="item-3" onclick="updateTopic(event);">multi-step</li>
-                        <li id="item-4" onclick="updateTopic(event);">v.o.b.s.</li>
+                        <li class="item-1" onclick="updateTopic(event);">one-step</li>
+                        <li  class="item-2" onclick="updateTopic(event);">two-step</li>
+                        <li class="item-3" onclick="updateTopic(event);">multi-step</li>
+                        <li class="item-4" onclick="updateTopic(event);">v.o.b.s.</li>
                     </ul>
                 </li>
                 <li class="menu-container">Speed Options
                     <ul class="menu-items">
-                        <li>fast (5 secs/answer)</li>
-                        <li>medium (15 secs/answer)</li>
-                        <li>slow (45 secs/answer)</li>
+                        <li class="item-1">fast (5 secs)</li>
+                        <li class="item-2">medium (15 secs)</li>
+                        <li class="item-3">slow (45 secs)</li>
                     </ul>
                 </li>
             </ul>
+
+            
         </menu>
         <!-- holds the menu options (speed and type of equation) -->
 
