--- a/static site/index.html
+++ b/static site/index.html
@@ -21,6 +21,7 @@
 
     <body>
         <menu>
+            <!-- holds the menu options (type of equation and speed) -->
             <ul>
                 <li class="menu-container" id="menu-header">Types of Equation
                     <ul class="menu-items">
@@ -40,6 +41,7 @@
             </ul>
 
             <div class="speed-outer">
+                <!-- indicates the current speed -->
                 <svg height="30" width="50">
                     <circle cx="25" cy="25" r="20" stroke="white" stroke-width="4" fill="none"/>
                 </svg>
@@ -54,70 +56,16 @@
             </p>
             
         </menu>
-        <!-- holds the menu options (speed and type of equation) -->
+
 
         <main>
+            <!-- holds the type of equation, problem given, answer to the equation, and the "next" button -->
             <h1 class="topic" id="topic-name">choose a type of equation</h1>
             <h2 class="equation" id="current-equation"></h2>
             <h2 class="answer" id="current-answer"></h2>
             <button id="next-button" onclick="replaceEquation();  hideAnswer(); timeAnswer();">next-question</button> 
-            <!-- force close menu is not functional -->
         </main>
-        <!-- holds the type of equation, problem given, answer to the equation, and the "next" button -->
+
     </body>
 
-
-    <!-- <body>
-        <div class="speed-outer">
-            <svg height="30" width="50">
-                <circle cx="25" cy="25" r="20" stroke="white" stroke-width="4" fill="none"/>
-            </svg>
-        </div>
-        <div class="speed-toggle" id="slow" onclick="changeSpeed();">
-            <svg height="30" width="50">
-                <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3"/>
-            </svg>
-        </div>
-        <p class="speed-info">
-            45s/answer 
-        </p>
-
-        <div class="center-box">
-            <div class="topic">
-                <h1 id="topic-name">choose an equation</h1>
-            </div>
-            <div class="equation" onclick="timeAnswer();">
-                <h2 id="current-equation"></h2>
-            </div>
-            <div class="answer" onclick="showAnswer();">
-                <h2 id="current-answer"></h2>
-            </div>
-        <button id="next-button" onClick="replaceEquation(); hideAnswer(); timeAnswer(); closeMenu();">next</button>
-        </div>
-
-        <div id="menu-icon" onmouseenter="openMenu();" style="display: block;">
-            <svg height="100" width="100">
-                <circle cx="50" cy="65" r="6" stroke="white" stroke-width="0" fill="white"/>
-                <circle cx="50" cy= "50" r="6" stroke="white" stroke-width="0" fill="white"/>
-                <circle cx="50" cy="35" r="6" stroke="white" stroke-width="0" fill="white"/>
-            </svg>
-        </div>
-
-        <nav id="menu" class="closed" onmouseleave="closeMenu();">
-            <div class="menu-container" onclick="updateTopic(event);">
-                <a class="menu-item">one-step</a>
-            </div>
-            <div class="menu-container" onclick="updateTopic(event);">
-                <a class="menu-item">two-step</a>
-            </div>
-            <div class="menu-container">
-                <a class="menu-item" onclick="updateTopic(event);">multi-step</a>
-            </div>
-            <div class="menu-container">
-                <a class="menu-item" onclick="updateTopic(event);">v.o.b.s.</a>
-            </div>
-        </nav>
-
-
-    </body> -->
 </html>
