--- a/static site/index.html
+++ b/static site/index.html
@@ -11,9 +11,6 @@
         <link rel="manifest" href="/site.webmanifest">
         <link rel="stylesheet" href='main.css'>
         <script src='scripts.js'></script>
-        <script type="text/javascript" id="MathJax-script" async
-            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer>
-        </script>
 
     </head>
 
@@ -65,5 +62,9 @@
         </main>
 
     </body>
+
+    <script type="text/javascript" id="MathJax-script"
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
 
 </html>
