--- a/static site/index.html
+++ b/static site/index.html
@@ -64,7 +64,7 @@
     </body>
 
     <script type="text/javascript" id="MathJax-script"
-        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer>
     </script>
 
 </html>
