--- a/static site/index.html
+++ b/static site/index.html
@@ -38,20 +38,18 @@
                 </li>
             </ul>
 
-            <div class="speed-outer">
+            <div id="speed-outer">
                 <!-- indicates the current speed -->
                 <svg height="30" width="50">
                     <circle cx="25" cy="25" r="20" stroke="white" stroke-width="4" fill="none"/>
                 </svg>
             </div>
-            <div class="speed-toggle" id="slow" onclick="changeSpeed();">
+            <div id="speed-toggle" class="fast-slow" onclick="changeSpeed();">
                 <svg height="30" width="50">
                     <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3"/>
                 </svg>
             </div>
-            <p class="speed-info">
-                slow (45 secs)
-            </p>
+            <p id="speed-info">slow (45 secs)</p>
             
         </menu>
 
