--- a/static site/index.html
+++ b/static site/index.html
@@ -59,7 +59,8 @@
             <h1 class="topic" id="topic-name">choose a type of equation</h1>
             <h2 class="equation" id="current-equation"></h2>
             <h2 class="answer" id="current-answer"></h2>
-            <button id="next-button" onclick="replaceEquation(); hideAnswer(); timeShowAnswer();">next-question</button>
+            <h2 id="time-left"></h2>
+            <button id="next-button" onclick="replaceEquation(); hideAnswer(); timeShowAnswer(); displayCountdown();">next-question</button>
         </main>
 
     </body>
