UX/UI improvements

--- a/static site/index.html
+++ b/static site/index.html
@@ -57,10 +57,10 @@
         <main>
             <!-- holds the type of equation, problem given, answer to the equation, and the "next" button -->
             <h1 class="topic" id="topic-name">choose a type of equation</h1>
-            <h2 class="equation" id="current-equation"></h2>
+            <h2 class="equation" id="current-equation">and your speed from the menu</h2>
             <h2 class="answer" id="current-answer"></h2>
             <h2 id="time-left"></h2>
-            <button id="next-button" onclick="replaceEquation(); hideAnswer(); timeShowAnswer(); displayCountdown();">next-question</button>
+            <button id="next-button" onclick="replaceEquation(); hideAnswer(); timeShowAnswer(); displayCountdown(); updateButtonToCheck();">next question</button>
         </main>
 
     </body>
