--- a/static site/index.html
+++ b/static site/index.html
@@ -1,68 +1,67 @@
-
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Practice - homepage</title>
-        <meta name="viewport" content="width=device-width">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="stylesheet" href='main.css'>
-        <script src='scripts.js'></script>
-        <script type="text/javascript" id="MathJax-script"
-            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Practice - homepage</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href='main.css'>
+    <script src='scripts.js'></script>
+    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+        defer>
         </script>
 
-    </head>
+</head>
 
-    <body>
-        <menu>
-            <!-- holds the menu options (type of equation and speed) -->
-            <ul>
-                <li class="menu-container" id="menu-header">Types of Equation
-                    <ul class="menu-items">
-                        <li class="item-1" onclick="updateTopic(event);">one-step</li>
-                        <li  class="item-2" onclick="updateTopic(event);">two-step</li>
-                        <li class="item-3" onclick="updateTopic(event);">multi-step</li>
-                        <li class="item-4" onclick="updateTopic(event);">v.o.b.s.</li>
-                    </ul>
-                </li>
-                <li class="menu-container">Speed Options
-                    <ul class="menu-items">
-                        <li class="item-1" onclick="setSpeed(event);">fast (5 secs)</li>
-                        <li class="item-2" onclick="setSpeed(event);">medium (15 secs)</li>
-                        <li class="item-3" onclick="setSpeed(event);">slow (45 secs)</li>
-                    </ul>
-                </li>
-            </ul>
+<body>
+    <menu>
+        <!-- holds the menu options (type of equation and speed) -->
+        <ul>
+            <li class="menu-container" id="menu-header">Types of Equation
+                <ul class="menu-items">
+                    <li class="item-1" onclick="updateTopic(event);">one-step</li>
+                    <li class="item-2" onclick="updateTopic(event);">two-step</li>
+                    <li class="item-3" onclick="updateTopic(event);">multi-step</li>
+                    <li class="item-4" onclick="updateTopic(event);">v.o.b.s.</li>
+                </ul>
+            </li>
+            <li class="menu-container">Speed Options
+                <ul class="menu-items">
+                    <li class="item-1" onclick="setSpeed(event);">fast (5 secs)</li>
+                    <li class="item-2" onclick="setSpeed(event);">medium (15 secs)</li>
+                    <li class="item-3" onclick="setSpeed(event);">slow (45 secs)</li>
+                </ul>
+            </li>
+        </ul>
 
-            <div id="speed-outer">
-                <!-- indicates the current speed -->
-                <svg height="30" width="50">
-                    <circle cx="25" cy="25" r="20" stroke="white" stroke-width="4" fill="none"/>
-                </svg>
-            </div>
-            <div id="speed-toggle" class="fast-slow" onclick="incrementSpeed();">
-                <svg height="30" width="50">
-                    <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3"/>
-                </svg>
-            </div>
-            <p id="speed-info">slow (45 secs)</p>
-            
-        </menu>
+        <div id="speed-outer">
+            <!-- indicates the current speed -->
+            <svg height="30" width="50">
+                <circle cx="25" cy="25" r="20" stroke="white" stroke-width="4" fill="none" />
+            </svg>
+        </div>
+        <div id="speed-toggle" class="fast-slow" onclick="incrementSpeed();">
+            <svg height="30" width="50">
+                <line x1='25' y1='25' x2='5' y2='10' stroke="white" stroke-width="3" />
+            </svg>
+        </div>
+        <p id="speed-info">slow (45 secs)</p>
+
+    </menu>
 
 
-        <main>
-            <!-- holds the type of equation, problem given, answer to the equation, and the "next" button -->
-            <h1 class="topic" id="topic-name">choose a type of equation</h1>
-            <h2 class="equation" id="current-equation">and your speed from the menu</h2>
-            <h2 class="answer" id="current-answer"></h2>
-            <h2 id="time-left"></h2>
-            <button id="next-button" onclick="replaceEquation(); hideAnswer(); timeShowAnswer(); displayCountdown(); updateButtonToCheck();">next question</button>
-        </main>
+    <main id="main">
+        <!-- holds the type of equation, problem given, answer to the equation, and the "next" button -->
+        <h1 class="topic" id="topic-name">choose a type of equation</h1>
+        <h2 class="equation" id="current-equation">and your speed from the menu</h2>
+        <h2 class="answer" id="current-answer"></h2>
+        <h2 id="time-left"></h2>
+    </main>
 
-    </body>
+</body>
 
 </html>
