--- a/static site/index.html
+++ b/static site/index.html
@@ -10,6 +10,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href='main.css'>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css">`
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.js" type="text/javascript"></script>
+    <script>
+        var MQ = MathQuill.getInterface(2);
+    </script>
 </head>
 
 <body>
@@ -54,11 +60,23 @@
         <h1 class="topic" id="topic-name">choose a type of equation</h1>
         <h2 class="equation" id="current-equation">and your speed from the menu</h2>
         <h2 class="answer" id="current-answer"></h2>
+        <h2><span id="answer-input">x=</span></h2>
         <h2 id="time-left"></h2>
     </main>
     <script src='scripts.js'></script>
-    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
-        defer></script>
+    <script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer></script>
+
+    <script>
+        var answerSpan = document.getElementById('answer-input');
+        var answerMathField = MQ.MathField(answerSpan, {
+        handlers: {
+            edit: function() {
+            var enteredMath = answerMathField.latex(); // Get entered math in LaTeX format
+            checkAnswer(enteredMath);
+            }
+        }
+        });
+    </script>
 </body>
 
 </html>
